; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference_create_matching.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference_create_matching.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_reference_create_matching(i32** %0, i32* %1, i8* %2, i32* %3, i32 %4, i32* %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  store i32** %0, i32*** %9, align 8
  store i32* %1, i32** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i8* %6, i8** %15, align 8
  store i32* null, i32** %17, align 8
  %18 = load i32*, i32** %12, align 8
  %19 = call i32 @assert(i32* %18)
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 @git_reference__log_signature(i32** %17, i32* %20)
  store i32 %21, i32* %16, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %7
  %24 = load i32, i32* %16, align 4
  store i32 %24, i32* %8, align 4
  br label %38

25:                                               ; preds = %7
  %26 = load i32**, i32*** %9, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i8*, i8** %11, align 8
  %29 = load i32*, i32** %12, align 8
  %30 = load i32, i32* %13, align 4
  %31 = load i32*, i32** %17, align 8
  %32 = load i8*, i8** %15, align 8
  %33 = load i32*, i32** %14, align 8
  %34 = call i32 @reference__create(i32** %26, i32* %27, i8* %28, i32* %29, i32* null, i32 %30, i32* %31, i8* %32, i32* %33, i32* null)
  store i32 %34, i32* %16, align 4
  %35 = load i32*, i32** %17, align 8
  %36 = call i32 @git_signature_free(i32* %35)
  %37 = load i32, i32* %16, align 4
  store i32 %37, i32* %8, align 4
  br label %38

38:                                               ; preds = %25, %23
  %39 = load i32, i32* %8, align 4
  ret i32 %39
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @git_reference__log_signature(i32**, i32*) #1

declare dso_local i32 @reference__create(i32**, i32*, i8*, i32*, i32*, i32, i32*, i8*, i32*, i32*) #1

declare dso_local i32 @git_signature_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
